- added: FrameworkImage.colors(value)
- added: framework.responsePipe(req, res, url, [headers], [timeout], [callback])
- added: framework.responseCustom(req, res)
- added: framework.responseImageWithoutCache(req, res, filename/stream, fnProcess, [headers], [isIM])
- added: request.isSecure
- added: routing supports [https] and [http] flag (websocket too)
- added: builders.default(name)

- (IMPORTANT) updated: maximum request length (length 1 = 1 kB)
- (IMPORTANT) updated: String.prototype.encode() === HTML encode
- (IMPORTANT) updated: String.prototype.decode() === HTML decode
- updated: HttpFile.copy(filename, [callback]);
- updated: controller.plain();
- updated: framework.configure(filename or array, [rewrite])
- updated: NoSQL embedded database (new version v2.0.5)
- updated: @{meta(title, [description], [keywords], [image])}
- updated: framework.route(url, fn, { timeout: false });
- updated: framework.onAuthorization(req, res/socket, flags, next)) (@next has 2 params, IsLogged {Boolean}, new: User {Object})
- updated: @{text}, @{password}, @{hidden}, @{textarea}, @{radio}, @{checkbox}
- updated: String.prototype.sha1([salt])
- updated: String.prototype.md5([salt])
- updated: mail
- updated: decrease time to cache

- fixed: framework.responseFile()
- fixed: partial routing
- fixed: uploading
- fixed: utils.ls()
- fixed: ['json'] and ['post'] flag
- fixed: HTTP routing flags
- fixed: set of multiple cookies
- fixed: increment/decrement Date/Time
- fixed: paths (~ char is changing the relative path to the absolute path)
- fixed: minifyHTML (<script>)
- fixed: SMTP authentification
- fixed: String.prototype.params()
- (IMPORTANT) fixed: WebSocket
- fixed: WebSocket (user, session, request)
- fixed: WebSocket routing
- fixed: utils.request()

- removed: framework.config['directory-upload']
- removed: framework.verification()
- removed: framework.routeUpload()
- removed: controller.routeUpload()
- removed: controller.currentUpload()
- removed: @{currentUpload())